Update Bottom Icons
Signed-off-by: Bill Chan <billpwchan@hotmail.com>

--- a/resources.qrc
+++ b/resources.qrc
@@ -7,11 +7,12 @@
   -->
 
 <RCC>
-    <qresource prefix="images">
+    <qresource prefix="/images">
         <file>images/images/PyDracula.png</file>
         <file>images/images/PyDracula_vertical.png</file>
+        <file>images/images/PyDracula_horizontal.png</file>
     </qresource>
-    <qresource prefix="icons">
+    <qresource prefix="/icons">
         <file>images/icons/cil-3d.png</file>
         <file>images/icons/cil-4k.png</file>
         <file>images/icons/cil-account-logout.png</file>
@@ -267,5 +268,8 @@
         <file>images/icons/icon_minimize.png</file>
         <file>images/icons/icon_restore.png</file>
         <file>images/icons/icon_settings.png</file>
+        <file>images/icons/cil-transfer.svg</file>
+        <file>images/icons/GitHub-Mark-Light-120px-plus.png</file>
+        <file>images/icons/LI-Logo.png</file>
     </qresource>
 </RCC>
