--- a/resources.qrc
+++ b/resources.qrc
@@ -1,16 +1,9 @@
-<!--
-  ~ Futu Algo: Algorithmic High-Frequency Trading Framework
-  ~ Copyright (c)  billpwchan - All Rights Reserved
-  ~ Unauthorized copying of this file, via any medium is strictly prohibited
-  ~ Proprietary and confidential
-  ~ Written by Bill Chan <billpwchan@hotmail.com>, 2021
-  -->
-
 <RCC>
     <qresource prefix="/images">
         <file>images/images/PyDracula.png</file>
         <file>images/images/PyDracula_vertical.png</file>
         <file>images/images/PyDracula_horizontal.png</file>
+        <file>images/images/FutuBull.png</file>
     </qresource>
     <qresource prefix="/icons">
         <file>images/icons/cil-3d.png</file>
