--- a/main.ui
+++ b/main.ui
@@ -1564,47 +1564,48 @@
                   <property name="readOnly">
                    <bool>true</bool>
                   </property>
-                  <property name="html">
-                      <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-                          &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;meta
-                          charset=&quot;utf-8&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-                          p, li { white-space: pre-wrap; }
-                          &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Segoe UI'; font-size:14px;
-                          font-weight:100; font-style:normal;&quot;&gt;
-                          &lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px;
-                          margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span
-                          style=&quot; font-size:12pt; font-weight:600; color:#ff79c6;&quot;&gt;FUTU ALGO&lt;/span&gt;&lt;/p&gt;
-                          &lt;p align=&quot;center&quot; style=&quot; margin-top:12px; margin-bottom:12px;
-                          margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span
-                          style=&quot; font-family:'Microsoft JhengHei UI'; font-size:9pt; font-weight:400;
-                          color:#ffffff;&quot;&gt;An Algorithmic Trading soltuion developed based on FutuOpenD and
-                          FutuOpenAPI, and can be used for backtesting, stock screening and high-frequency trading.&lt;/span&gt;&lt;/p&gt;
-                          &lt;p align=&quot;center&quot; style=&quot; margin-top:12px; margin-bottom:12px;
-                          margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span
-                          style=&quot; font-size:10pt; font-weight:400; color:#ffffff;&quot;&gt;Apache-2.0 License&lt;/span&gt;&lt;/p&gt;
-                          &lt;p align=&quot;center&quot; style=&quot; margin-top:12px; margin-bottom:12px;
-                          margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span
-                          style=&quot; font-size:9pt; font-weight:400; color:#bd93f9;&quot;&gt;Created by: Bill Chan&lt;/span&gt;&lt;/p&gt;
-                          &lt;p align=&quot;center&quot; style=&quot; margin-top:12px; margin-bottom:12px;
-                          margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span
-                          style=&quot; font-size:12pt; font-weight:600; color:#ff79c6;&quot;&gt;Author Info&lt;/span&gt;&lt;/p&gt;
-                          &lt;p align=&quot;center&quot; style=&quot; margin-top:12px; margin-bottom:12px;
-                          margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span
-                          style=&quot; font-size:9pt; font-weight:700; color:#ffffff;&quot;&gt;Website: &lt;/span&gt;&lt;span
-                          style=&quot; font-size:9pt; font-weight:400; color:#ffffff;&quot;&gt;billpwchan.com&lt;/span&gt;&lt;/p&gt;
-                          &lt;p align=&quot;center&quot; style=&quot; margin-top:12px; margin-bottom:12px;
-                          margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span
-                          style=&quot; font-size:9pt; font-weight:700; color:#ffffff;&quot;&gt;Email: &lt;/span&gt;&lt;span
-                          style=&quot; font-size:9pt; font-weight:400; color:#ffffff;&quot;&gt;billpwchan@hotmail.com&lt;/span&gt;&lt;/p&gt;
-                          &lt;p align=&quot;center&quot; style=&quot; margin-top:12px; margin-bottom:12px;
-                          margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span
-                          style=&quot; font-size:12pt; font-weight:600; color:#ff79c6;&quot;&gt;To Contribute&lt;/span&gt;&lt;/p&gt;
-                          &lt;p align=&quot;center&quot; style=&quot; margin-top:12px; margin-bottom:12px;
-                          margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;a href=&quot;https://github.com/billpwchan/futu_algo&quot;&gt;&lt;span
-                          style=&quot; font-family:'Microsoft JhengHei UI'; font-size:9pt; font-weight:400;
-                          text-decoration: underline; color:#ffffff;&quot;&gt;GitHub Repository&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;
-                      </string>
-                  </property>
+                     <property name="html">
+                         <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+                             &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;meta
+                             charset=&quot;utf-8&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+                             p, li { white-space: pre-wrap; }
+                             &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Segoe UI'; font-size:14px;
+                             font-weight:100; font-style:normal;&quot;&gt;
+                             &lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px;
+                             margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span
+                             style=&quot; font-size:12pt; font-weight:600; color:#ff79c6;&quot;&gt;FUTU ALGO&lt;/span&gt;&lt;/p&gt;
+                             &lt;p align=&quot;center&quot; style=&quot; margin-top:12px; margin-bottom:12px;
+                             margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span
+                             style=&quot; font-family:'Microsoft JhengHei UI'; font-size:9pt; font-weight:400;
+                             color:#ffffff;&quot;&gt;An Algorithmic Trading soltuion developed based on FutuOpenD and
+                             FutuOpenAPI, and can be used for backtesting, stock screening and high-frequency trading.&lt;/span&gt;&lt;/p&gt;
+                             &lt;p align=&quot;center&quot; style=&quot; margin-top:12px; margin-bottom:12px;
+                             margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span
+                             style=&quot; font-size:10pt; font-weight:400; color:#ffffff;&quot;&gt;Apache-2.0 License&lt;/span&gt;&lt;/p&gt;
+                             &lt;p align=&quot;center&quot; style=&quot; margin-top:12px; margin-bottom:12px;
+                             margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span
+                             style=&quot; font-size:9pt; font-weight:400; color:#bd93f9;&quot;&gt;Created by: Bill Chan&lt;/span&gt;&lt;/p&gt;
+                             &lt;p align=&quot;center&quot; style=&quot; margin-top:12px; margin-bottom:12px;
+                             margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span
+                             style=&quot; font-size:12pt; font-weight:600; color:#ff79c6;&quot;&gt;Author Info&lt;/span&gt;&lt;/p&gt;
+                             &lt;p align=&quot;center&quot; style=&quot; margin-top:12px; margin-bottom:12px;
+                             margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span
+                             style=&quot; font-size:9pt; font-weight:700; color:#ffffff;&quot;&gt;Website: &lt;/span&gt;&lt;span
+                             style=&quot; font-size:9pt; font-weight:400; color:#ffffff;&quot;&gt;billpwchan.com&lt;/span&gt;&lt;/p&gt;
+                             &lt;p align=&quot;center&quot; style=&quot; margin-top:12px; margin-bottom:12px;
+                             margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span
+                             style=&quot; font-size:9pt; font-weight:700; color:#ffffff;&quot;&gt;Email: &lt;/span&gt;&lt;span
+                             style=&quot; font-size:9pt; font-weight:400; color:#ffffff;&quot;&gt;billpwchan@hotmail.com&lt;/span&gt;&lt;/p&gt;
+                             &lt;p align=&quot;center&quot; style=&quot; margin-top:12px; margin-bottom:12px;
+                             margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span
+                             style=&quot; font-size:12pt; font-weight:600; color:#ff79c6;&quot;&gt;To Contribute&lt;/span&gt;&lt;/p&gt;
+                             &lt;p align=&quot;center&quot; style=&quot; margin-top:12px; margin-bottom:12px;
+                             margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;a
+                             href=&quot;https://github.com/billpwchan/futu_algo&quot;&gt;&lt;span style=&quot;
+                             font-family:'Microsoft JhengHei UI'; font-size:9pt; font-weight:400; text-decoration:
+                             underline; color:#ffffff;&quot;&gt;GitHub Repository&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;
+                         </string>
+                     </property>
                  </widget>
                 </item>
                </layout>
@@ -3629,16 +3630,16 @@ background-repeat: no-repeat;</string>
                                                 <number>9</number>
                                             </property>
                                             <property name="rightMargin">
-                           <number>9</number>
-                          </property>
-                          <property name="bottomMargin">
-                           <number>9</number>
-                          </property>
-                          <item>
-                           <widget class="QLineEdit" name="settingsConfigLabel">
-                            <property name="minimumSize">
-                             <size>
-                              <width>0</width>
+                                                <number>9</number>
+                                            </property>
+                                            <property name="bottomMargin">
+                                                <number>9</number>
+                                            </property>
+                                            <item>
+                                                <widget class="QLineEdit" name="settingsConfigLabel">
+                                                    <property name="minimumSize">
+                                                        <size>
+                                                            <width>0</width>
                               <height>30</height>
                              </size>
                             </property>
@@ -3725,39 +3726,39 @@ background-repeat: no-repeat;</string>
                             </property>
                            </widget>
                           </item>
-                          <item>
-                              <widget class="QPushButton" name="settingsMapButton">
-                                  <property name="minimumSize">
-                                      <size>
-                                          <width>150</width>
-                                          <height>30</height>
-                                      </size>
-                                  </property>
-                                  <property name="font">
-                                      <font>
-                                          <family>Segoe UI</family>
-                                          <pointsize>-1</pointsize>
-                                          <italic>false</italic>
-                                          <bold>false</bold>
-                                      </font>
-                                  </property>
-                                  <property name="cursor">
-                                      <cursorShape>PointingHandCursor</cursorShape>
-                                  </property>
-                                  <property name="styleSheet">
-                                      <string notr="true">background-color: rgb(52, 59, 72);</string>
-                                  </property>
-                                  <property name="text">
-                                      <string>Open</string>
-                                  </property>
-                                  <property name="icon">
-                                      <iconset resource="resources.qrc">
-                                          <normaloff>:/icons/images/icons/cil-folder-open.png</normaloff>
-                                          :/icons/images/icons/cil-folder-open.png
-                                      </iconset>
-                                  </property>
-                              </widget>
-                          </item>
+                             <item>
+                                 <widget class="QPushButton" name="settingsMapButton">
+                                     <property name="minimumSize">
+                                         <size>
+                                             <width>150</width>
+                                             <height>30</height>
+                                         </size>
+                                     </property>
+                                     <property name="font">
+                                         <font>
+                                             <family>Segoe UI</family>
+                                             <pointsize>-1</pointsize>
+                                             <italic>false</italic>
+                                             <bold>false</bold>
+                                         </font>
+                                     </property>
+                                     <property name="cursor">
+                                         <cursorShape>PointingHandCursor</cursorShape>
+                                     </property>
+                                     <property name="styleSheet">
+                                         <string notr="true">background-color: rgb(52, 59, 72);</string>
+                                     </property>
+                                     <property name="text">
+                                         <string>Open</string>
+                                     </property>
+                                     <property name="icon">
+                                         <iconset resource="resources.qrc">
+                                             <normaloff>:/icons/images/icons/cil-folder-open.png</normaloff>
+                                             :/icons/images/icons/cil-folder-open.png
+                                         </iconset>
+                                     </property>
+                                 </widget>
+                             </item>
                          </layout>
                         </item>
                                 </layout>
