--- a/ui/resources.qrc
+++ b/ui/resources.qrc
@@ -1,3 +1,11 @@
+<!--
+  ~ Futu Algo: Algorithmic High-Frequency Trading Framework
+  ~ Copyright (c)  billpwchan - All Rights Reserved
+  ~ Unauthorized copying of this file, via any medium is strictly prohibited
+  ~ Proprietary and confidential
+  ~ Written by Bill Chan <billpwchan@hotmail.com>, 2021
+  -->
+
 <RCC>
     <qresource prefix="/images">
         <file>images/images/PyDracula.png</file>
